--- a/app/views/kullanicis/_form.html.erb
+++ b/app/views/kullanicis/_form.html.erb
@@ -20,9 +20,15 @@
     <%= f.text_field :soyad %>
   </div>
   <div class="field">
+    <%= f.label :telefon %><br />
+    <%= f.text_field :telefon %>
+  </div>
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.text_field :email %>
+
   </div>
+
   <div class="field">
     <%= f.label :adres %><br />
     <%= f.text_area :adres %>
